--- a/app/src/main/res/menu/sort.xml
+++ b/app/src/main/res/menu/sort.xml
@@ -14,11 +14,11 @@
 
             <item
                 android:id="@+id/top_rated"
-                android:title="Top Rated"
+                android:title="@string/TopRated"
                 app:showAsAction="always|withText" />
             <item
                 android:id="@+id/popular"
-                android:title="Popular"
+                android:title="@string/popular"
                 app:showAsAction="always|withText"/>
 
         </menu>
