--- a/app/src/main/res/menu/sort.xml
+++ b/app/src/main/res/menu/sort.xml
@@ -20,6 +20,10 @@
                 android:id="@+id/popular"
                 android:title="@string/popular"
                 app:showAsAction="always|withText"/>
+            <item
+                android:id="@+id/settings"
+                android:title="@string/settings"
+                app:showAsAction="always|withText"/>
 
         </menu>
     </item>
