--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,122 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.a5airi.popularmovies.DetailsActivity"
-    android:background="@color/colorAccent">
+    android:background="@color/colorAccent"
+    tools:context="com.a5airi.popularmovies.DetailsActivity">
 
-   <RelativeLayout
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:background="@color/colorAccent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:orientation="horizontal"
-        android:id="@+id/linear">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        >
 
-        <ImageView
-            android:id="@+id/cover_imageView"
-            android:layout_width="130dp"
+
+
+
+            <ImageView
+                android:id="@+id/intro_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_alignParentRight="true"
+                android:scaleType="fitXY"
+                android:button="@drawable/customcheckbox"
+                android:id="@+id/favorite_CheckBox"
+                android:onClick="onCheckclick"
+                />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:id="@+id/linear"
+            android:layout_below="@id/intro_imageView"
+
+            android:orientation="horizontal"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/cover_imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+
+                    android:layout_margin="5dp"
+                    app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="@color/review"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/user_rating_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/release_date_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="15sp" />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/trailer"
+            android:layout_below="@id/linear"
+            android:padding="5dp"
+            android:textStyle="bold"
+            android:background="@color/ccccc"
+            android:text="@string/trailer"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp"/>
 
-            android:layout_margin="2dp"
-            app:srcCompat="@android:drawable/ic_menu_report_image" />
-
-        <ImageView
-            android:id="@+id/intro_imageView"
-            android:layout_width="240dp"
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/trailer"
+            android:orientation="horizontal"
+            android:id="@+id/Trailerrecycler_view"/>
 
-            android:layout_margin="2dp"
-            app:srcCompat="@android:drawable/ic_menu_report_image" />
+        <!--<TextView-->
+            <!--android:id="@+id/title"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/intro_imageView"-->
+            <!--android:background="@color/ccccc"-->
+            <!--android:padding="5dp"-->
+            <!--android:text="@string/title"-->
+            <!--android:textColor="@android:color/background_light"-->
+            <!--android:textSize="15sp" />-->
 
-    </LinearLayout>
+        <!---->
+        <!--<TextView-->
+            <!--android:id="@+id/user_rating"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/title_view"-->
+            <!--android:background="@color/ccccc"-->
+            <!--android:padding="5dp"-->
+            <!--android:text="@string/UserRating"-->
+            <!--android:textColor="@android:color/background_light"-->
+            <!--android:textSize="15sp" />-->
 
-       <TextView
-           android:id="@+id/title"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/linear"
-           android:background="@color/ccccc"
-           android:padding="5dp"
-           android:text="@string/title"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
+       <!---->
 
-       <TextView
-           android:id="@+id/title_view"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/title"
-           android:padding="5dp"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
-
-       <TextView
-           android:id="@+id/user_rating"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/title_view"
-           android:background="@color/ccccc"
-           android:padding="5dp"
-           android:text="@string/UserRating"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
-
-       <TextView
-           android:id="@+id/user_rating_view"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/user_rating"
-           android:padding="5dp"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
-
-       <TextView
-           android:id="@+id/release_date"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/user_rating_view"
-           android:background="@color/ccccc"
-           android:padding="5dp"
-           android:text="@string/ReleaseDate"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
-
-       <TextView
-           android:id="@+id/release_date_view"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/release_date"
-           android:padding="5dp"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
-
-       <TextView
-           android:id="@+id/summary"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/release_date_view"
-           android:background="@color/ccccc"
-           android:padding="5dp"
-           android:text="@string/Summary"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
-
-       <TextView
-           android:id="@+id/sammary_view"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/summary"
-           android:padding="5dp"
-           android:textColor="@android:color/background_light"
-           android:textSize="15sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/release_date"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/user_rating_view"-->
+            <!--android:background="@color/ccccc"-->
+            <!--android:padding="5dp"-->
+            <!--android:text="@string/ReleaseDate"-->
+            <!--android:textColor="@android:color/background_light"-->
+            <!--android:textSize="15sp" />-->
 
 
-   </RelativeLayout>
+        <TextView
+            android:id="@+id/summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Trailerrecycler_view"
+            android:background="@color/ccccc"
+            android:padding="5dp"
+            android:textStyle="bold"
+            android:text="@string/Summary"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/sammary_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/summary"
+            android:padding="5dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/reviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sammary_view"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textStyle="italic"
+            android:text="@string/reviews"
+            android:textColor="@color/review"
+            android:textSize="30sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/reviews"
+            android:orientation="vertical"
+            android:id="@+id/Reviewrecycler_view"/>
+
+
+    </RelativeLayout>
 
 
 </ScrollView>
