--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:id="@+id/movie_imageView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         android:padding="8dp"
         android:scaleType="fitXY"
         android:layout_margin="-2dp"
@@ -17,8 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+
         android:textSize="8pt"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorP"
+        android:background="@color/colorPrimary"
         android:layout_below="@+id/movie_imageView"
         />
 </RelativeLayout>
