--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -54,7 +54,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-
                     android:layout_margin="5dp"
                     app:srcCompat="@android:drawable/ic_menu_report_image" />
 
@@ -81,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:gravity="center"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorP"
                     android:textSize="15sp" />
 
                 <TextView
@@ -90,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:gravity="center"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorP"
                     android:textSize="15sp" />
 
 
@@ -106,7 +105,7 @@
             android:textStyle="bold"
             android:background="@color/ccccc"
             android:text="@string/trailer"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorP"
             android:textSize="15sp"/>
 
         <android.support.v7.widget.RecyclerView
@@ -162,7 +161,7 @@
             android:padding="5dp"
             android:textStyle="bold"
             android:text="@string/Summary"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorP"
             android:textSize="15sp" />
 
         <TextView
@@ -171,7 +170,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/summary"
             android:padding="5dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorP"
             android:textSize="15sp" />
 
         <TextView
